--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-session": "^1.0.2",
-    "sequelize": "^6.30.0"
+    "sequelize": "^6.30.0",
+    "socket.io": "^4.6.1"
   }
 }
